<resources>
    <string name="app_name">TuChat</string>
    <string name="your_email">Your Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="welcome_to_tuchat_app">Welcome to TuChat App</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="need_a_new_account">Need a new account ?</string>
    <string name="account_settings">Account Settings</string>
    <string name="all_users">All Users</string>
    <string name="logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="display_name">Display Name</string>
    <string name="create_account">Create account</string>
    <string name="default_status">Hi, there am using TuChat App</string>
    <string name="change_status">Change Status</string>
    <string name="change_image">Change Image</string>
</resources>
