<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.job.tuchat.userManagement.HomeActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="246dp"
        android:fontFamily="@font/roboto_mono_medium"
        android:padding="10dp"
        android:text="@string/welcome_to_tuchat_app"
        android:textColor="@android:color/white"
        android:textSize="22sp" />

    <Button
        android:id="@+id/home_button_alreadyhaveaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="74dp"
        android:background="@drawable/border_button_bg"
        android:fontFamily="@font/roboto_mono_medium"
        android:padding="10dp"
        android:text="@string/already_have_an_account"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/home_button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/home_button_alreadyhaveaccount"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:background="@android:color/white"
        android:padding="10dp"
        android:text="@string/need_a_new_account"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />
</RelativeLayout>
